--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tanstack/react-query": "^5.59.17",
+    "@tanstack/react-query-devtools": "^5.59.17",
+    "@tanstack/react-query-next-experimental": "^5.59.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
